# EoSLab

./: .clang-tidy  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt
benchmarks/notebook/: .gitignore  README.md  requirements.txt
benchmarks/src/: bench_cubic_vs_teqp.cpp  bench_ideal_models.cpp  verify.cpp
docs/: implementing_a_new_eos.md
include/eoslab/: concepts.hpp  core_calculations.hpp  eos_base.hpp  eos_pair.hpp  eoslab.hpp  no_residual.hpp  numbers.hpp  xlnx.hpp
include/eoslab/core/: aggregate.hpp  attributes.hpp  concepts.hpp  core_calculations.hpp  eos_base.hpp  eos_pair.hpp  horner.hpp  multifluid_base.hpp  numbers.hpp  onefluid_base.hpp  parameter_storage.hpp  xlnx.hpp
include/eoslab/ideal_models/: const_cp.hpp  nasa7.hpp  nasa9.hpp
include/eoslab/residual_models/: cubic.hpp  no_residual.hpp  peng_robinson.hpp  van_der_waals.hpp
tests/: derivative_test_harness.hpp  eos_test_models.hpp  test_aggregate.cpp  test_concepts.cpp  test_const_cp.cpp  test_core_calculations.cpp  test_eos_base.cpp  test_fast_pow.cpp  test_horner.cpp  test_multifluid_base.cpp  test_nasa7.cpp  test_nasa9.cpp  test_no_residual.cpp  test_onefluid_base.cpp  test_parameter_storage.cpp  test_peng_robinson.cpp  test_van_der_waals.cpp  test_xlnx.cpp
